# Embodied-Social-Interface

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.go
MturkInterface/database/: database.go
MturkInterface/server/: server.go
MturkInterface/server/static/: index.html
app/: CMakeLists.txt
app/clip_maker/: CMakeLists.txt
app/clip_maker/conf/: config.ini
app/clip_maker/scripts/: clip_maker.xml  run_all_behaviors.sh
app/embodied_social/: CMakeLists.txt
app/embodied_social/conf/: config.ini
app/embodied_social/scripts/: embodied_social.xml
app/simCartesianControl/: CMakeLists.txt
app/simCartesianControl/scripts/: cartesianSolver.xml.template
app/simFaceExpressions/: CMakeLists.txt
app/simFaceExpressions/scripts/: simFaceExpressions.xml.template
database/: database.go
server/: server.go
src/: CMakeLists.txt
src/clipMaker/: CMakeLists.txt
src/clipMaker/include/: clipMaker.hpp
src/clipMaker/src/: clipMaker.cpp  main.cpp
src/embodiedSocialInterface/: CMakeLists.txt
src/embodiedSocialInterface/include/: csvLogger.hpp  embodiedSocialInterface.hpp  stateMachine.hpp
src/embodiedSocialInterface/src/: csvLogger.cpp  embodiedSocialInterface.cpp  main.cpp  stateMachine.cpp
src/yarpAudioPlayer/: CMakeLists.txt
src/yarpMediaPlayer/: CMakeLists.txt  yarpMediaPlayer.py
src/yarpVideoPlayer/: CMakeLists.txt
src/yarpWebOpener/: CMakeLists.txt  yarpWebOpener.py
